--- a/public/assets/user/css/style.css
+++ b/public/assets/user/css/style.css
@@ -4149,7 +4149,7 @@ ol {
         text-align: center;
     }
     .inner-header .nav-right {
-        text-align: left;
+        text-align: right;
     }
     .inner-header .nav-right li:first-child {
         margin-left: 0;
@@ -4381,9 +4381,6 @@ ol {
 @media only screen and (max-width: 492px) {
     .category-item img#category-img{
         max-height: 100px !important;
-    }
-    h2.section-title{
-        font-size: 30px !important;
     }
     .search{
         display: none;
